# rust-axum-api-tutorial

./: README.md
server/: Cargo.toml
server/src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
server/src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
server/tests/: quick_dev.rs
